adding to new branch

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Git Practice</h1>
     <p>My Second Commit</p>
     <p>New Branch</p>
+    <p>Try this one and one and one</p>
 </body>
 </html>
